Fixes 2